<resources>
    <string name="app_name">BRN Books</string>
    <string name="_app_name">BRN Books</string>
    <string name="content">BRN Books</string>
    <string name="icon">Icon</string>
    <string name="App_Name">BRN Books App</string>
    <string name="login">Login</string>
    <string name="continue_without_login">Continue Without Login</string>
    <string name="app_icon">App Icon</string>
    <string name="_login">Please Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="_login_">Login</string>
    <string name="new_user_signup">Not have Account? <b>Sign Up</b></string>
    <string name="back_button">back Button</string>
    <string name="logo">LOGO</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email_">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="dashboard_user">Dashboard User</string>
    <string name="_email">palashraghuwanshi16@gmail.com</string>
    <string name="logoutbtn">logoutBtn</string>
    <string name="dashboard_admin">Dashboard Admin</string>
    <string name="add_category">Add Category</string>
    <string name="add_pdf">add pdf</string>
    <string name="add_a_new_category">Add a new Category</string>
    <string name="category_title">Category Title</string>
    <string name="submit">submit</string>
    <string name="search">Search</string>
    <string name="category_title_">Category Title</string>
    <string name="image_cardview">image cardView</string>
    <string name="add_a_new_book">Add a new book</string>
    <string name="pdf">pdf</string>
    <string name="book_title">Book Title</string>
    <string name="book_description">Book Description</string>
    <string name="book_category">Book Category</string>
    <string name="upload">Upload</string>
    <string name="books">Books</string>
    <string name="the_book_title">The Book Title</string>
    <string name="more">more</string>
    <string name="description">The description of the book</string>
    <string name="size">13MB</string>
    <string name="year">dd/MM/yyyy</string>
    <string name="edit_book_info">Edit Book Info</string>
    <string name="book_title_">Book Title</string>
    <string name="update">Update</string>
    <string name="book_details">Book Details</string>
    <string name="back">back</string>
    <string name="_book_title">Book Title</string>
    <string name="n_a">N/A</string>
    <string name="date">Date</string>
    <string name="size_">Size</string>
    <string name="views">Views</string>
    <string name="downloads">Downloads</string>
    <string name="_description">The description of the book</string>
    <string name="pages">Pages</string>
    <string name="read">Read</string>
    <string name="read_book">Read Book</string>
    <string name="n_n">N/N</string>
    <string name="download">Download</string>
    <string name="_book_title_">Book Title</string>
    <string name="book_description_">Book Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password_">Forgot PassWord</string>
    <string name="loading">Loading</string>
    <string name="breathe">Breathe</string>
    <string name="spinner">spinner</string>
    <string name="sound">sound</string>
    <string name="vibrate">vibrate</string>
    <string name="spinner_">Spinner</string>
    <string name="inhale">Inhale</string>
    <string name="background">background</string>
    <string name="breath_before_read">Breath Before Read</string>
    <string name="donate">donate</string>
    <string name="edit">Edit</string>
    <string name="menu">Menu</string>
    <string name="note">Note</string>
    <string name="tab_all">All</string>
    <string name="tab_personal">Personal</string>
    <string name="tab_donation">Donation</string>
    <string name="tab_work">Work</string>
    <string name="tab_book_notes">Book Notes</string>
    <string name="note_">Note</string>
    <string name="notes">Notes</string>
    <string name="search_">Search</string>
    <string name="save">Save</string>
    <string name="category">Category</string>
    <string name="category_">Category</string>
    <string name="note_title">Note Title</string>
    <string name="note_is_empty">Note is empty</string>
    <string name="_notes">Note is empty</string>
    <string name="note_empty">Note empty</string>
    <string name="is_empty">Is Empty</string>
    <string name="saving_user_info">saving user info...</string>
    <string name="uploading_pdf">Uploading PDF...</string>
    <string name="updating_book_info">updating Book info...</string>
    <string name="please_wait">please wait...</string>
    <string name="checking_user">Checking user...</string>
    <string name="logging_in">Logging in...</string>
    <string name="downloading_book">Downloading Book...</string>
    <string name="creating_account">Creating Account...</string>
    <string name="checking_user_">Checking user...</string>
    <string name="delete">delete</string>
    <string name="delete_">Delete</string>
    <string name="share">share</string>
    <string name="share_">Share</string>
    <string name="note_is_empty_">Note is empty</string>
    <string name="button">button</string>
    <string name="buttonback">buttonBack</string>
    <string name="back_">back</string>
    <string name="_category">Category</string>
    <string name="back__">back</string>
    <string name="category__">Category</string>
    <string name="note__">Note</string>
    <string name="tabs">tabs</string>
    <string name="viewpager">viewPager</string>
    <string name="add_notes">Add Notes</string>
    <string name="enter_your_register_email_to_receive_instructions_to_reset_your_password_">Enter your register email to receive instructions to reset your password</string>
    <string name="title">Title</string>
    <string name="write_a_note">Write A Note</string>
    <string name="delete__">Delete</string>
    <string name="__back">back</string>
    <string name="support_brn_books">Support BRN Books</string>
    <string name="support_brn_books_app">Support BRN Books App</string>
    <string name="nyour_little_bit_of_contribution_n_can_give_millions_and_billions_of_users_an_ads_free_experience">\nYour little bit of contribution\n can give, millions and billions of users, an ads free experience.</string>
    <string name="coffee">coffee</string>
    <string name="support_brn_books_with_upi_debit_cards">Support BRN Books with UPI / Debit cards</string>
    <string name="whatsapp">whatsapp</string>
    <string name="support_brn_books_with_upi_debit_cards_">Support BRN Books with UPI / Debit cards</string>
    <string name="email__">email</string>
    <string name="breath">Short Breathing Exercises 🧘,\ncan make your brain 🧠,\n to read 📚 a book 📘,\n in a present moment🧘.</string>
    <string name="b_breathe"><![CDATA[B -> BREATHE 🧘]]></string>
    <string name="r_read_books"><![CDATA[      R -> READ BOOKS 📚]]></string>
    <string name="n_make_notes"><![CDATA[      N -> MAKE NOTES ➕]]></string>
    <string name="scrollview">scrollview</string>
    <string name="donate_">Donate</string>

    <string-array name="labels">
        <item>Personal</item>
        <item>Books</item>
        <item>Work</item>
    </string-array>
</resources>