<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background= "@drawable/back01"
    android:layout_height="match_parent"
    tools:context=".books.screens.MainActivity">

    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/App_Name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/skipBtn"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_button01"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/shape_button02"
            android:text="@string/continue_without_login"
            android:textColor="@color/purple_500" />

    <ImageView
        android:id="@+id/donate"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@drawable/donation"
        android:contentDescription="@string/back"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/donateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/donate"
        android:layout_alignParentEnd="true"
        android:text="@string/donate_" />


    </RelativeLayout>