<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back01"
    tools:context=".books.screens.SplashScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginBottom="10dp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/b_breathe"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_read_books"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="4dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_make_notes"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginTop="4dp"/>



</LinearLayout>