<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back01"
    tools:context=".books.main.DashboardUserActivity">

<!--    Toolbar-->
<RelativeLayout
    android:id="@+id/toolbarRL"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="@drawable/shape_toolbar02">


    <ImageButton
        android:contentDescription="@string/back"
        android:id="@+id/nib_back"
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_back_white"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="@string/dashboard_user"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/subtitleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleTv"
        android:text="@string/_email"
        android:textColor="@color/black"
        android:textStyle="bold"/>


    <ImageButton
        android:id="@+id/logoutBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_logout_white"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/logoutbtn" />
</RelativeLayout>

<!--    Tabs: Show Book Categories-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarRL"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tab_all"
        app:tabBackground="@drawable/tab_selector"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="0dp"
        app:tabMode="scrollable" />



<!--    View Pager: Show categorized books in fragments-->
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:contentDescription="@string/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabLayout"/>
</RelativeLayout>