<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.activity.MainActivity2">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_home" />

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:contentDescription="@string/back"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp"
        android:src="@drawable/ic_back_white"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.tabs.TabLayout
        android:contentDescription="@string/tabs"
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:background="@color/background"
        app:tabMode="scrollable"
        app:tabSelectedTextColor="@color/colorTitle"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Headline"
        app:tabTextColor="@color/colorGrey" />

    <androidx.viewpager.widget.ViewPager
        android:contentDescription="@string/viewpager"
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/add_notes"
        android:focusable="true"
        android:src="@drawable/ic_note_white"
        tools:ignore="ImageContrastCheck" />

</RelativeLayout>