<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back01"
    tools:context=".books.screens.ForgotPasswordActivity">

    <!--    Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="@drawable/shape_toolbar01"
        >

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:padding="10dp"
            android:src="@drawable/ic_back_white"
            tools:ignore="RedundantDescriptionCheck" />

        <ImageView
            android:id="@+id/iconIV"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"/>

        <TextView
            android:id="@+id/label1Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iconIV"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password_"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/label2Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label1Tv"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_register_email_to_receive_instructions_to_reset_your_password_"
            android:textColor="@color/white"
            />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <!--            Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width = "match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailTil"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/shape_edittext01"
                android:drawableStart="@drawable/ic_baseline_email_gray"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--            Submit Button-->
        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailTil"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button01"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </RelativeLayout>

</RelativeLayout>