<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:elevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:contentDescription="@string/back"
            android:id="@+id/nib_back"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_back_white"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/note_"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/nib_back"
            app:layout_constraintEnd_toStartOf="@+id/nib_edit"
            app:layout_constraintStart_toEndOf="@+id/nib_back"
            app:layout_constraintTop_toTopOf="@+id/nib_back" />

        <ImageButton
            android:id="@+id/nib_edit"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:contentDescription="@string/edit"
            android:scaleType="centerInside"
            android:src="@drawable/ic_note_white"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.Toolbar>